[project]
name = "audiosourceseparation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "livelossplot>=0.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
